remove visibleClass variable from Application and fix the css selector, but still got bug from useControl.js onClick_Maximize function

--- a/src/style/animations.css
+++ b/src/style/animations.css
@@ -3,7 +3,7 @@
     opacity: 0;
     transform-origin: bottom left;
 
-    &[data-app-control-status="OPEN"] {
+    &[app-control-status="OPEN"] {
         opacity: 1;
         scale: 1;
         translate: 0 0;
@@ -15,7 +15,7 @@
                 translate 100ms ease;
     }
 
-    &[data-app-control-status="CLOSE"] {
+    &[app-control-status="CLOSE"] {
         opacity: 0;
         scale: 0.2;
         translate: 0 0;
@@ -27,55 +27,7 @@
                 translate 100ms ease;
     }
 
-    &[data-app-control-status="MINIMIZE"] {
-        opacity: 0;
-        scale: 0.2;
-        translate: 0 100%;
-        pointer-events: none;
-
-        transition:
-                opacity 200ms ease,
-                scale 200ms ease,
-                translate 200ms ease ;
-    }
-
-    &[data-app-control-status="MAXIMIZE"] {
-        opacity: 1;
-        scale: 1;
-        translate: 0 0;
-        pointer-events: auto;
-
-        transition:
-                opacity 100ms ease,
-                scale 100ms ease,
-                translate 100ms ease;
-    }
-
-    &.OPEN {
-        opacity: 1;
-        scale: 1;
-        translate: 0 0;
-        pointer-events: auto;
-
-        transition:
-                opacity 100ms ease,
-                scale 100ms ease,
-                translate 100ms ease;
-    }
-
-    &.MAXIMIZE {
-        opacity: 1;
-        scale: 1;
-        translate: 0 0;
-        pointer-events: auto;
-
-        transition:
-                opacity 100ms ease,
-                scale 100ms ease,
-                translate 100ms ease;
-    }
-
-    &.MINIMIZE {
+    &[app-control-status="MINIMIZE"] {
         opacity: 0;
         scale: 0.2;
         translate: 0 100%;
@@ -87,9 +39,9 @@
                 translate 200ms ease ;
     }
 
-    &.CLOSE {
-        opacity: 0;
-        scale: 0.2;
+    &[app-control-status="MAXIMIZE"] {
+        opacity: 1;
+        scale: 1;
         translate: 0 0;
         pointer-events: auto;
 
